--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,29 @@
   </section>
 </main>
 
+<!-- 作品资料馆入口（不太显眼的小卡片） -->
+<section class="section subtle-portfolio-section">
+  <div class="container">
+    <div class="portfolio-entry-card">
+      <p class="section-subtitle small-label">
+        附加内容 · Additional
+      </p>
+      <div class="portfolio-entry-main">
+        <div>
+          <h2 class="section-title small">作品资料馆</h2>
+          <p class="section-subtitle">
+            把桌游规则、Gal 世界观和各类图片整理成一个独立的小小资料馆，需要的时候可以下潜进去慢慢翻。
+          </p>
+        </div>
+        <a href="portfolio/" class="btn btn-ghost btn-compact">
+          去资料馆看看
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <footer class="site-footer">
   <div class="container">
     © 2025 月之森的黄瓜架 · Projects
